--- a/themes/goddard_uswds_sub/assets/styles/scss/goddard.scss
+++ b/themes/goddard_uswds_sub/assets/styles/scss/goddard.scss
@@ -1,3 +1,7 @@
+// Mixins / Functions / Variables
+@import "core/variables";
+@import "core/mixins";
+
 // Any settings for sass and grid
 @import "settings";
 
@@ -19,3 +23,9 @@
 
 // Mobile fixes
 @import "mobile";
+
+
+// Components
+@import "components/icon-content-block";
+@import "components/user-list";
+@import "components/navigation";
