--- a/themes/goddard_uswds_sub/templates/system/block/block--icon-and-text-block.html.twig
+++ b/themes/goddard_uswds_sub/templates/system/block/block--icon-and-text-block.html.twig
@@ -1,13 +1,19 @@
-<div class="icon-text-block">
-  <div{{ attributes }}>
-  
-    {{ title_prefix }}
-    {% if label %}
-      <h2{{ title_attributes }}>{{ label }}</h2>
-    {% endif %}
-    {{ title_suffix }}
-    
-    {{ content }}
-    
-  </div>
-</div>  
+{#<div class="icon-text-block">#}
+  {#<div{{ attributes }}>#}
+  {##}
+    {#{{ title_prefix }}#}
+    {#{% if label %}#}
+      {#<h2{{ title_attributes }}>{{ label }}</h2>#}
+    {#{% endif %}#}
+    {#{{ title_suffix }}#}
+    {##}
+    {#{{ content }}#}
+    {##}
+  {#</div>#}
+{#</div>#}
+{{ title_prefix }}
+{% if label %}
+  <h2{{ title_attributes }}>{{ label }}</h2>
+{% endif %}
+{{ title_suffix }}
+{{ content }}
