--- a/themes/goddard_uswds_sub/assets/styles/scss/_header.scss
+++ b/themes/goddard_uswds_sub/assets/styles/scss/_header.scss
@@ -4,11 +4,11 @@
   box-shadow: 0px 0px 50px #C5C5C5;
   border-bottom: none;
   z-index: 1;
-  position: relative;  
+  position: relative;
   .usa-logo {
     bottom: unset;
     position: relative;
-  }  
+  }
 }
 
 .nasa-header-menu {
@@ -21,7 +21,7 @@
     max-height: 80px;
   }
   .utility-menu {
-    margin-left: auto;
+    //margin-left: auto;
     display: inline-flex;
     .usa-search {
       display: inline-flex;
@@ -29,8 +29,8 @@
     // Search Field
     #search-block-form {
       border: 1px solid #ddd;
-      border-radius: 20px;  
-      overflow: hidden; 
+      border-radius: 20px;
+      overflow: hidden;
       margin-top: 1.3rem;
       height: 4rem;
       padding-top: 4px;
@@ -48,8 +48,8 @@
         background-image: url(../../../images/mag.png);
         border: none;
       }
-    }  
-  }  
+    }
+  }
 }
 
 .user-logged-in {
@@ -78,6 +78,12 @@
 .nasa-header-menu ul {
   margin-left: 40px;
   margin-right: 40px;
+  @include respond-to(small) {
+    margin-left: 0;
+  }
+  @include respond-to(medium) {
+    margin-left: 40px;
+  }
 }
 
 .nasa-header-menu ul li {
@@ -94,29 +100,6 @@
 /* END NASA header */
 
 /* SITE header */
-.usa-navbar {
-  display: flex;
-  align-items: center;
-  width: 100% !important;
-  max-width: none;
-  height: auto;
-  background-image: url('/themes/goddard_uswds_sub/images/banner.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-top: 10px;
-  padding: 0 20px;
-  .region.region-header {
-    width: 100%;
-  }  
-}
-
-.usa-nav-primary {
-  font-family: $poppins;
-  text-transform: uppercase;
-}  
-.usa-nav-primary > li > a {
-  font-weight: 500;
-}
 
 .usa-logo {
   max-width: 40%;
@@ -135,29 +118,5 @@
   color: white;
 }
 
-.usa-nav-container {
-  max-width: none !important;
-  padding-left: 0;
-  padding-right: 0;
-  .usa-nav {
-    float: none;
-  }
-  .usa-grid-full {
-    width: 100%;
-    margin: 0 auto;  
-    .office-name-wrap {
-      width: 50%;
-    }
-    .office-name {
-      padding-right: 3rem;
-      padding-left: 3rem;        
-      color: #FCEBA7;
-      margin-bottom: 1.5em;
-      margin-top: 1.5em;
-      font-size: 5rem;
-      line-height: 5.5rem;      
-    }
-  }
-}
 
 /* END SITE header */
