--- a/themes/goddard_uswds_sub/assets/styles/scss/core/_variables.scss
+++ b/themes/goddard_uswds_sub/assets/styles/scss/core/_variables.scss
@@ -2,3 +2,12 @@
 // $color-primary: #666;
 // $color-primary-darker: #444;
 // $color-primary-darkest: #222;
+
+$breakpoints: (
+  xsmall: 480px,
+  small: 600px,
+  medium: 801px,
+  medium-large: 951px,
+  large: 1025px,
+  xlarge: 1281px,
+);
