--- a/themes/goddard_uswds_sub/assets/styles/scss/uswds.scss
+++ b/themes/goddard_uswds_sub/assets/styles/scss/uswds.scss
@@ -1,4 +1,5 @@
 // Import overrides of USWDS variables.
-@import "_variables.scss";
+@import "core/variables";
+
 // Import the USWDS source.
-@import "../node_modules/uswds/src/stylesheets/uswds.scss";
+@import "../../../node_modules/uswds/src/stylesheets/uswds.scss";
