--- a/themes/goddard_uswds_sub/templates/inc/footer.html.twig
+++ b/themes/goddard_uswds_sub/templates/inc/footer.html.twig
@@ -39,9 +39,16 @@
           <img src="/themes/goddard_uswds_sub/images/nasa-logo-sm.png" alt="Nasa logo" />
         </a>
         <div class="footer-info">
-          <div>{{ footer_info_line_one }}</div>
-          <div>{{ footer_info_line_two }}</div>
-          <div>{{ footer_info_line_three }}</div>                    
+          {{ kint(footer_info_line_one) }}
+          {% if footer_info_line_one %}
+            <div>{{ footer_info_line_one }}</div>
+          {% endif %}
+          {% if footer_info_line_two %}
+            <div>{{ footer_info_line_two }}</div>
+          {% endif %}
+          {% if footer_info_line_three %}
+            <div>{{ footer_info_line_three }}</div>
+          {% endif %}                 
         </div>
       </div>
 
